[tool.poetry]
name = "codema_dev_tasks"
version = "0.1.0"
description = "A collection of Python helper functions for use in ETL pipelines"
authors = ["Rowan Molony <rowan.molony@codema.ie>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
